syntax = "proto3";
option java_package = "org.hyperledger.protos";
package protos;

// The representation of the state of a transactions set
message TxSetStateValue {
    // Nonce incremented every time the state of this Tx Set is changed
    uint64 nonce = 1;
    // The block at which the transactions set referenced by this state was introduced
    uint64 introBlock = 2;
    // The last block in which this state was modified
    uint64 lastModifiedAtBlock = 3;
    // Index of the current default transaction
    uint64 index = 4;
    // The number of transactions that belong to this Transactions Set
    uint64 txNumber = 5;
    // txsInBlock[i] gives a index - block information for this transactions set
    // For instance txsInBlock[i].inBlockIndex gives the starting index of the transactions
    // in this set assigned to that block.
    // e.g. if txsInBlock[i].inBlockIndex == 7 and txsInBlock[i].blockNr == 2 mean that the 8-th transaction
    // of this transactions set is stored at block 2
    repeated TxSetIndex indexAtBlock = 6;
}

// The TxSetIndex identifies a transaction among the ones
// of a transactions set by providing the block number where that
// transaction was defined and the index among the transactions
// belonging to the part of the set included in that block number.
message TxSetIndex {
    // The block where the transaction at which this index refers to is contained
    uint64 blockNr = 1;
    // Index of a transaction among the list of transactions belonging
    // to the transactions set at blockNr
    uint64 inBlockIndex = 2;
}

// Used to index a transactions set in the db
message TxSetToBlock {
    // The index from the transactions of a given block at which this txSet was registered
    map<uint64, uint64> indexInBlock = 1;
}
